--- a/client/main.css
+++ b/client/main.css
@@ -63,3 +63,29 @@ body {
 /* .board-form  > button {
   background-color: #62807e;
 } */
+.post-view-wrapper {
+  width: 60%;
+  margin:  auto;
+}
+
+.post-view-go-list-btn {
+  border: 0;
+  padding: 10px;
+  background-color: #ffd9d9;
+}
+
+.post-view-row {
+  margin: 30px 0;
+  display: flex;
+}
+
+.post-view-row > label:first-child {
+  margin: 10px 0;
+  width: 30%;
+  font-weight: bold;
+}
+
+.post-view-row > *:nth-child(2) {
+  margin: 10px 0;
+  width: 70%;
+}
